--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
